--- a/package.json
+++ b/package.json
@@ -1,7 +1,17 @@
 {
   "name": "burak-react",
   "version": "0.1.0",
+  "description": "This is burack react redux frontend project",
   "private": true,
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "keywords": [],
+  "author": "Max",
+  "license": "ISC",
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
@@ -13,21 +23,18 @@
     "react": "^18.2.0",
     "react-dom": "^18.0.0",
     "react-redux": "^7.2.8",
+    "react-router-dom": "^5.1.9",
     "react-scripts": "5.0.0",
     "typescript": "~4.1.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@types/jest": "^27.5.2",
     "@types/node": "^17.0.45",
     "@types/react": "^18.2.48",
-    "@types/react-dom": "^18.2.18"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "@types/react-dom": "^18.2.18",
+    "@types/react-router-dom": "^5.3.3"
   },
   "eslintConfig": {
     "extends": [
@@ -45,6 +52,12 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ]
+  },
+  "jest": {
+    "moduleDirectories": [
+      "node_modules",
+      "src"
     ]
   }
 }
