--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.15.21",
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^4.2.4",
@@ -25,6 +26,7 @@
     "react-redux": "^7.2.8",
     "react-router-dom": "^5.1.9",
     "react-scripts": "5.0.0",
+    "styled-components": "^5.3.5",
     "typescript": "~4.1.5",
     "web-vitals": "^2.1.4",
     "yarn": "^1.22.22"
@@ -34,7 +36,8 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
-    "@types/react-router-dom": "^5.3.3"
+    "@types/react-router-dom": "^5.3.3",
+    "@types/styled-components": "^5.1.34"
   },
   "eslintConfig": {
     "extends": [
