--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-router-dom": "^5.1.9",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.5",
+    "swiper": "^8.3.1",
     "typescript": "~4.1.5",
     "web-vitals": "^2.1.4",
     "yarn": "^1.22.22"
