--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.8.4",
     "@mui/joy": "^5.0.0-beta.47",
+    "@mui/lab": "^5.0.0-alpha.86",
     "@mui/material": "^5.15.21",
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.0.0",
     "react-redux": "^7.2.8",
