--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-redux": "^7.2.8",
     "react-router-dom": "^5.1.9",
     "react-scripts": "5.0.0",
+    "redux-logger": "^3.0.6",
     "styled-components": "^5.3.5",
     "swiper": "^8.3.1",
     "typescript": "~4.1.5",
@@ -41,6 +42,7 @@
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "@types/react-router-dom": "^5.3.3",
+    "@types/redux-logger": "^3.0.13",
     "@types/styled-components": "^5.1.34"
   },
   "eslintConfig": {
