--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+   
+    "axios": "^0.27.2",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.0.0",
@@ -37,6 +39,7 @@
     "yarn": "^1.22.22"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^17.0.45",
     "@types/react": "^18.2.48",
