feat: publish modal component of Auth

--- a/package.json
+++ b/package.json
@@ -13,17 +13,17 @@
   "author": "Max",
   "license": "ISC",
   "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.11.0",
+    "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.8.4",
     "@mui/joy": "^5.0.0-beta.47",
     "@mui/lab": "^5.0.0-alpha.86",
-    "@mui/material": "^5.15.21",
+    "@mui/material": "^5.16.6",
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-   
     "axios": "^0.27.2",
     "moment": "^2.29.4",
     "react": "^18.2.0",
@@ -33,6 +33,7 @@
     "react-scripts": "5.0.0",
     "redux-logger": "^3.0.6",
     "styled-components": "^5.3.5",
+    "sweetalert2": "^11.4.23",
     "swiper": "^8.3.1",
     "typescript": "~4.1.5",
     "web-vitals": "^2.1.4",
