--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "sweetalert2": "^11.4.23",
     "swiper": "^8.3.1",
     "typescript": "~4.1.5",
+    "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.4",
     "yarn": "^1.22.22"
   },
